ISSUE #992 - Improved spacing, Group Description text fix

--- a/frontend/components/groups/css/groups.css
+++ b/frontend/components/groups/css/groups.css
@@ -63,11 +63,14 @@ groups .groupMetaData {
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100px;
+    margin:10px 5px;
 }
 
 groups .groupColorBar {
     width: 15px;
     margin: 10px;
+    min-height: 75px;
+    max-height: 75px;
 }
 
 groups .groupColorHolder {
